--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
 name = "adventisthymnarium-web"
 compatibility_date = "2024-01-02"
 
+# Build configuration
+pages_build_output_dir = ".svelte-kit/cloudflare"
+
 [[d1_databases]]
 binding = "DB"
 database_name = "hymnarium"
