--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20241230.0",
-		"@eslint/compat": "^1.2.3",
+		"@eslint/compat": "1.2.3",
 		"@playwright/test": "^1.45.3",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.15.0",
