--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
 		"test:integration": "playwright test",
 		"dev:d1": "concurrently \"vite dev\" \"wrangler pages dev --d1 DB=hymnarium --r2 BUCKET=adventist-hymnarium-assets --proxy 5173\""
 	},
+	"pnpm": {
+		"overrides": {
+			"eslint": "9.0.0"
+		}
+	},
 	"files": [
 		"dist",
 		"!dist/**/*.test.*",
@@ -49,7 +54,7 @@
 		"autoprefixer": "^10.4.20",
 		"better-sqlite3": "^11.7.0",
 		"concurrently": "^9.1.2",
-		"eslint": "^9.7.0",
+		"eslint": "9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
