--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,9 @@ compatibility_date = "2024-01-02"
 
 # Build configuration
 pages_build_output_dir = ".svelte-kit/cloudflare"
-node_version = "20.9.0"
+
+[build.environment]
+NODE_VERSION = "20.9.0"
 
 [[d1_databases]]
 binding = "DB"
